# mw-groundcover-generator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENCE.txt  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml  test.yml
GUI/: Copy of GUI.cpp  GUI.cpp  GUI.h  Grass.fbp  Grass2.fbp  GrassGen.cpp  GrassGen.h  SettingsEditor.cpp  SettingsEditor.h  main.cpp
docs/: CLI.md  UserGuide.md  documented_configuration_example.ini  grass_general_info.ini
es/: ESActivator.cpp  ESActivator.h  ESBase.cpp  ESBase.h  ESCell.cpp  ESCell.h  ESConfig.h  ESDCEL.h  ESDoor.h  ESFile.cpp  ESFile.h  ESHdr.cpp  ESHdr.h  ESLTex.cpp  ESLTex.h  ESLand.cpp  ESLand.h  ESOBJS.h  ESPathGrid.h  ESRecord.cpp  ESRecord.h  ESRecordFactory.cpp  ESRecordFactory.h  ESRecordSectionLoader.h  ESRecordThreadLoader.cpp  ESRef.h  ESSetup.cpp  ESSetup.h  ESStandardObject.cpp  ESStandardObject.h  ESStatic.cpp  ESStatic.h  ESSubAmbi.h  ESSubCellData.cpp  ESSubCellData.h  ESSubCellFRMR.h  ESSubFloat.cpp  ESSubFloat.h  ESSubLong.cpp  ESSubLong.h  (+11 more)
esrw/: EspWriter.h
include/: Configuration.h  Funcs.h  GameConfiguration.h  GenThread.h  Ini.h  LoadOrder.h  MapFunctions.h  includes.h
package/: Mesh Gen - Readme.txt  grass.ini  grass_cell_ref.ini  grass_general_info.ini
src/: Configuration.cpp  Funcs.cpp  GameConfiguration.cpp  GenThread.cpp  Ini.cpp  LoadOrder.cpp  main.cpp
src/cli/: CliMain.cpp  CliMain.h  main.cpp
src/esp/: ESCell.cpp  ESCell.h  ESFile.cpp  ESFile.h  ESFileContainer.cpp  ESFileContainer.h  ESLTex.cpp  ESLTex.h  ESLand.cpp  ESLand.h  EspReader.cpp  EspReader.h  EspWriter.cpp  EspWriter.h  MutableEsp.cpp  MutableEsp.h
src/gui/: GUI.cpp  GUI.h  Grass.fbp  GrassGen.cpp  GrassGen.h  main.cpp
src/logic/: Configuration.cpp  Configuration.h  FixPosition.cpp  FixPosition.h  GameConfiguration.cpp  Generator.cpp  Generator.h  LoadOrder.cpp
src/math/: Angle.h  Constants.h  Util.cpp  Util.h  Vector3.h
tst/: CMakeLists.txt  CliTest.cpp  ConfigurationTest.cpp  FixSnapshotTest.cpp  GenerationSnapshotTest.cpp  Main.cpp  ModParsingTest.cpp  RegenerateSnapshotTest.cpp  SnapshotTest.cpp  TestHelpers.cpp  TestHelpers.h
tst/existing_mod_configs/aesthesia_groundcover/: Aesthesia_grass_all_2.ini
tst/existing_mod_configs/remiros_groundcover/: Rem_AI.ini  Rem_AL.ini  Rem_BC.ini  Rem_GL.ini  Rem_GM.ini  Rem_WG.ini
tst/existing_mods/: GMST.esp  Rem_AC_Cutdown.esp
tst/fix_snapshots/: UpdatedBase.esp
tst/fix_snapshots/basic/: expected_delete.esp  expected_update.esp
tst/generation_snapshots/any_named_cell_exclusion/: expected.esp
tst/generation_snapshots/bans/: configuration.ini  expected.esp
tst/generation_snapshots/basic/: expected.esp
tst/generation_snapshots/cell_name_exclusion/: expected.esp
tst/generation_snapshots/global_settings/: configuration.ini  expected.esp
tst/generation_snapshots/region_exclusion/: configuration.ini  expected.esp
tst/mod_configs/aesthesia_groundcover/: Aesthesia_grass_all_1.ini
tst/mod_configs/remiros_groundcover/: Rem_AC.ini  Rem_AT.ini  Rem_Solstheim.ini
tst/regenerate_snapshots/basic/: configuration.ini  expected.esp  input.esp
tst/snapshots/: GrassTestBase.esp
tst/snapshots/any_named_cell/: configuration.ini
tst/snapshots/any_named_cell_exclusion/: configuration.ini  expected.esp
tst/snapshots/bans/: configuration.ini  expected.esp
tst/snapshots/basic/: configuration.ini  expected.esp
tst/snapshots/cell_name/: configuration.ini  expected.esp
tst/snapshots/cell_name_exclusion/: configuration.ini  expected.esp
tst/snapshots/global_settings/: configuration.ini  expected.esp
tst/snapshots/region/: configuration.ini  expected.esp
tst/snapshots/region_exclusion/: expected.esp
